codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__advanced_only_reasoning_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  选 择  GPT-5.5 的 推 理 级 别

› 1. 更 高 推 理 强 度 …  极 致 会 更 快 消 耗 用 量 限 额

  按  enter 确 认 ， 或 按  esc 返 回
