codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_collab_wait_items_render_history.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: combined
---
• 正在等待 2 个代理
  └ Robie [explorer]
    Ada [reviewer]


• 等待结束
  └ Robie [explorer]: 已完成 - Done
    Ada [reviewer]: 运行中
