codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec_no_reason.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: terminal.backend().vt100().screen().contents()
---


  是否要运行以下命令？

  $ echo hello world

› 1. 是，继续 (y)
  2. 是，并且不再询问以 `echo hello world` 开头的命令 (p)
  3. 否，并告诉 Codex 应如何调整 (esc)

  按 enter 确认，或按 esc 取消
