codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: normalize_snapshot_paths(contents)
---


  是否要进行以下修改？

  说明：The model wants to apply changes
  目标：/tmp/project/README.md

› 1. 是，继续 (y)
  2. 是，并且不再询问这些文件 (a)
  3. 否，并告诉 Codex 应如何调整 (esc)

  按 enter 确认，或按 esc 取消
