codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
expression: popup
---
  更 新 模 型 权 限

› 1. 请 求 审 批   允 许 在 工 作 区 内 读 写 和 运 行 命 令 ； 需 要 时 请 求 审 批 。
  2. 完 全 访 问   允 许 不 受 沙 箱 限 制 地 访 问 系 统 。

  按  enter 确 认 ， 或 按  esc 返 回
